removed special treatment for ConfigFix files, which are now directly transformed in torte